# paper-P06-WISE-endogenous-wrench-equilibria

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  RECONSTRUCTION_PLAN.md  pyproject.toml
configs/: ablation.yaml  phase_transition.yaml  roles.yaml
experiments/: _common.py  exp01_phase_transition.py  exp02_constraint_ablation.py  exp03_role_emergence.py  exp04_threshold_validation.py  fig_scene.py  run_campaign.py
paper/: main.tex  references.bib
paper/figures/: ablation_table.tex
paper/sections/: 01_introduction.tex  02_model.tex  03_wise_equilibrium.tex  04_algorithm.tex  05_experiments.tex  06_conclusion.tex
src/wise_mr/: __init__.py  baselines.py  dynamics.py  endogenous_graph.py  equilibrium.py  metrics.py  population_game.py  primal_dual.py  scenarios.py  wrench_tensor.py
tests/: conftest.py  test_centralized_equivalence.py  test_fiedler_gradient.py  test_wise_feasibility.py  test_wrench_tensor.py
